<resources>
    <string name="app_name">VehicleRentalSystem</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="manage_cars">Manage Cars</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="car_category">Car Category</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="view_trips">View Trips</string>
    <array name="car_category">
        <item>CAR CATEGORY</item>
        <item>Hatchback</item>
        <item>SUV</item>
        <item>compact</item>
    </array>
    <array name="fueltype">
        <item>FUEL TYPE</item>
        <item>PETROL</item>
        <item>DIESEL</item>
        <item>CNG</item>
    </array>
    <array name="seating">
        <item>CHOOSE SEATING</item>
        <item>4</item>
        <item>6</item>
        <item>7</item>
    </array>
    <array name="delhicities">
        <item>CHOOSE LOCATION</item>
        <item>Rajiv Chowk</item>
        <item>Badarpur</item>
        <item>Vasant Kunj</item>
    </array>

    <array name="carcity">
        <item>SELECT CITY</item>
        <item>Delhi</item>
        <item>Mumbai</item>
    </array>


    <array name="city">
        <item>Delhi</item>
        <item>Mumbai</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
