<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item  android:visible="false" android:id="@+id/manageCars" android:icon="@drawable/editprofile_icon" android:title="@string/manage_cars"></item>
    <item  android:visible="false" android:id="@+id/viewTripsadmin" android:icon="@drawable/editprofile_icon" android:title="View Status"></item>
    <item  android:visible="false" android:id="@+id/viewTrips" android:icon="@drawable/editprofile_icon" android:title="@string/view_trips"></item>
    <item android:id="@+id/user_EditProfile" android:icon="@drawable/editprofile_icon" android:title="@string/edit_profile"></item>
    <item android:id="@+id/user_about" android:title="@string/about" android:icon="@drawable/about_profile"></item>
    <item android:id="@+id/logout"  android:title="@string/logout" android:icon="@drawable/logout_user"></item>

</menu>